src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__p_with_file.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"command -p echo file\")?"
---
command -p echo file

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   10  `p`        variable.parameter.option
11  15  `echo`     CALLABLE `echo`
15  20  ` file`    meta.function-call.arguments
