src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__v.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"command -v echo\")?"
---
command -v echo

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   10  `v`        variable.parameter.option
11  15  `echo`     CALLABLE `echo`
