src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__v_end_of_options_two_commands.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"command -v -- echo file\")?"
---
command -v -- echo file

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   10  `v`        variable.parameter.option
10  13  ` --`      keyword.operator.end-of-options
14  18  `echo`     CALLABLE `echo`
19  23  `file`     CALLABLE `file`
