src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__v_two_commands_double_quoted.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(r#\"command -v echo \"file\"\"#)?"
---
command -v echo "file"

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   10  `v`        variable.parameter.option
11  15  `echo`     CALLABLE `echo`
16  22  `"file"`   CALLABLE `file`
